Remove workflow. Sync.